# src/main/kotlin/net/atos/esuite/extract/model/shared/Fout.kt
@@ -1,0 +1,8 @@
+package net.atos.esuite.extract.model.shared
+
+import org.eclipse.microprofile.openapi.annotations.media.Schema
+
+class Fout(
+    @field:Schema(description = "Melding van fout")
+    val melding: String,
+    )
